# StarAnalysis

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  STARRED_REPOS.md  docker-compose.yml  pyproject.toml  requirements.txt  starred_data.json
.github/workflows/: update-profile-readme.yml  update-starred.yml
data/: .gitkeep
examples/: categories.json
src/: __init__.py  categorizer.py  cli.py  exporter.py  github.py  models.py  sync.py
src/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
